Header updated. Schedule minimized.

--- a/src/index.html
+++ b/src/index.html
@@ -66,58 +66,9 @@
       <img src="img/hero-mobile.png" alt="InOut Hero Image" class="img-fluid d-block d-md-none" />
       <div class="hero-container d-none d-md-block">
         <div id="heroImage">
-          <img src="img/hero@2x.png" srcset="img/hero.png 1x, img/hero@2x.png 2x" alt="Hero Image" class="img-fluid background" />
-
-          <img src="img/art-circle-2@2x.png" srcset="img/art-circle-2.png 1x, img/art-circle-2@2x.png 2x" alt="circle"
-            class="art-item circle big c1" />
-          <img src="img/art-circle-2@2x.png" srcset="img/art-circle-2.png 1x, img/art-circle-2@2x.png 2x" alt="circle"
-            class="art-item circle big c2" />
-          <img src="img/art-circle-1@2x.png" srcset="img/art-circle-1.png 1x, img/art-circle-1@2x.png 2x" alt="circle"
-            class="art-item circle c3" />
-          <img src="img/art-circle-2@2x.png" srcset="img/art-circle-2.png 1x, img/art-circle-2@2x.png 2x" alt="circle"
-            class="art-item circle c4" />
-          <img src="img/art-circle-1@2x.png" srcset="img/art-circle-1.png 1x, img/art-circle-1@2x.png 2x" alt="circle"
-            class="art-item circle c5" />
-          <img src="img/art-circle-2@2x.png" srcset="img/art-circle-2.png 1x, img/art-circle-2@2x.png 2x" alt="circle"
-            class="art-item circle c6" />
-          <img src="img/art-circle-1@2x.png" srcset="img/art-circle-1.png 1x, img/art-circle-1@2x.png 2x" alt="circle"
-            class="art-item circle c7" />
-          <img src="img/art-circle-1@2x.png" srcset="img/art-circle-1.png 1x, img/art-circle-1@2x.png 2x" alt="circle"
-            class="art-item circle c8" />
-          <img src="img/art-circle-2@2x.png" srcset="img/art-circle-2.png 1x, img/art-circle-2@2x.png 2x" alt="circle"
-            class="art-item circle big c9" />
-          <img src="img/art-circle-2@2x.png" srcset="img/art-circle-2.png 1x, img/art-circle-2@2x.png 2x" alt="circle"
-            class="art-item circle c10" />
-          <img src="img/art-circle-2@2x.png" srcset="img/art-circle-2.png 1x, img/art-circle-2@2x.png 2x" alt="circle"
-            class="art-item circle big c11" />
-          <img src="img/art-circle-2@2x.png" srcset="img/art-circle-2.png 1x, img/art-circle-2@2x.png 2x" alt="circle"
-            class="art-item circle c12" />
-          <img src="img/art-circle-2@2x.png" srcset="img/art-circle-2.png 1x, img/art-circle-2@2x.png 2x" alt="circle"
-            class="art-item circle big c13" />
-
-          <img src="img/art-box@2x.png" srcset="img/art-box.png 1x, img/art-box@2x.png 2x" alt="box" class="art-item box b1" />
-          <img src="img/art-box@2x.png" srcset="img/art-box.png 1x, img/art-box@2x.png 2x" alt="box" class="art-item box b2" />
-          <img src="img/art-box@2x.png" srcset="img/art-box.png 1x, img/art-box@2x.png 2x" alt="box" class="art-item box b3" />
-          <img src="img/art-box@2x.png" srcset="img/art-box.png 1x, img/art-box@2x.png 2x" alt="box" class="art-item box b4" />
-
-          <img src="img/art-car@2x.png" srcset="img/art-car.png 1x, img/art-car@2x.png 2x" alt="car" class="art-item vehicle v1" />
-          <img src="img/art-car@2x.png" srcset="img/art-car.png 1x, img/art-car@2x.png 2x" alt="car" class="art-item vehicle v2" />
-
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 23.5 25.6" class="art-item wifi w1" fill="#ff858a">
-            <path class="eb5ef480-c6df-43b6-9c8a-f4e2022e45c3" d="M11 .9C6.8 2.6 3 6.5.5 11.9L0 13l.6.6 2 1.8.6.5.4-.9c2-4.1 4.8-7 8-8.4a8.6 8.6 0 0 1 9 1.5l.6.5.4-1L23 4.4l.4-1-.6-.5A11.2 11.2 0 0 0 11 1z" />
-            <path class="eb5ef480-c6df-43b6-9c8a-f4e2022e45c3" d="M19.7 10.3A7.5 7.5 0 0 0 12 9l-.5.2a14.7 14.7 0 0 0-6.5 7l-.5 1 .6.5 2 1.8.6.5.4-.8a9.3 9.3 0 0 1 4.5-4.6 4.9 4.9 0 0 1 5 .7l.5.5.4-1 1.5-3.1.4-1-.6-.5z" />
-            <path class="eb5ef480-c6df-43b6-9c8a-f4e2022e45c3" d="M13.6 25.6l.4-1 2.4-5 .4-1-.6-.6a3.4 3.4 0 0 0-3.4-.2 6.6 6.6 0 0 0-3 2.8l-.6 1 .6.6 3.2 2.9z" /></svg>
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 23.5 25.6" class="art-item wifi w2" fill="#ff858a">
-            <path class="eb5ef480-c6df-43b6-9c8a-f4e2022e45c3" d="M11 .9C6.8 2.6 3 6.5.5 11.9L0 13l.6.6 2 1.8.6.5.4-.9c2-4.1 4.8-7 8-8.4a8.6 8.6 0 0 1 9 1.5l.6.5.4-1L23 4.4l.4-1-.6-.5A11.2 11.2 0 0 0 11 1z" />
-            <path class="eb5ef480-c6df-43b6-9c8a-f4e2022e45c3" d="M19.7 10.3A7.5 7.5 0 0 0 12 9l-.5.2a14.7 14.7 0 0 0-6.5 7l-.5 1 .6.5 2 1.8.6.5.4-.8a9.3 9.3 0 0 1 4.5-4.6 4.9 4.9 0 0 1 5 .7l.5.5.4-1 1.5-3.1.4-1-.6-.5z" />
-            <path class="eb5ef480-c6df-43b6-9c8a-f4e2022e45c3" d="M13.6 25.6l.4-1 2.4-5 .4-1-.6-.6a3.4 3.4 0 0 0-3.4-.2 6.6 6.6 0 0 0-3 2.8l-.6 1 .6.6 3.2 2.9z" /></svg>
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 23.5 25.6" class="art-item wifi w3" fill="#ff858a">
-            <path class="eb5ef480-c6df-43b6-9c8a-f4e2022e45c3" d="M11 .9C6.8 2.6 3 6.5.5 11.9L0 13l.6.6 2 1.8.6.5.4-.9c2-4.1 4.8-7 8-8.4a8.6 8.6 0 0 1 9 1.5l.6.5.4-1L23 4.4l.4-1-.6-.5A11.2 11.2 0 0 0 11 1z" />
-            <path class="eb5ef480-c6df-43b6-9c8a-f4e2022e45c3" d="M19.7 10.3A7.5 7.5 0 0 0 12 9l-.5.2a14.7 14.7 0 0 0-6.5 7l-.5 1 .6.5 2 1.8.6.5.4-.8a9.3 9.3 0 0 1 4.5-4.6 4.9 4.9 0 0 1 5 .7l.5.5.4-1 1.5-3.1.4-1-.6-.5z" />
-            <path class="eb5ef480-c6df-43b6-9c8a-f4e2022e45c3" d="M13.6 25.6l.4-1 2.4-5 .4-1-.6-.6a3.4 3.4 0 0 0-3.4-.2 6.6 6.6 0 0 0-3 2.8l-.6 1 .6.6 3.2 2.9z" /></svg>
+          <img src="img/banner.png" alt="Hero Image" class="img-fluid background" />
         </div>
       </div>
-    </div>
     <div class="container position-relative mt-4 mt-lg-0 mb-lg-5">
       <div class="d-flex justify-content-center flex-column flex-md-row align-items-center">
         <div class="header-text mx-lg-5 text-center text-md-left">
@@ -386,16 +337,6 @@
         </div>
       </div>
       <div class="mt-4 mx-auto" style="max-width: 720px">
-        <nav>
-          <div class="nav nav-tabs" id="nav-tab" role="tablist">
-            <a class="nav-item nav-link active" id="schedule-day-1" data-toggle="tab" href="#day-1" role="tab"
-              aria-controls="day-1" aria-selected="true">12 October</a>
-            <a class="nav-item nav-link" id="schedule-day-2" data-toggle="tab" href="#day-2" role="tab" aria-controls="day-2"
-              aria-selected="false">13 October</a>
-            <a class="nav-item nav-link" id="schedule-day-3" data-toggle="tab" href="#day-3" role="tab" aria-controls="day-3"
-              aria-selected="false">14 October</a>
-          </div>
-        </nav>
         <div class="tab-content" id="scheduleTable">
           <div class="tab-pane fade show active" id="day-1" role="tabpanel" aria-labelledby="schedule-day-1">
             <table class="table table-1">
