Added and translated Code of Conduct, Schedule and more

--- a/src/code-of-conduct/index.html
+++ b/src/code-of-conduct/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>InOut 5.0 | October 12 - 14, 2018</title>
+  <title>Famaton - 9 de Noviembre, 2019</title>
 
   <!-- Meta tags -->
   <meta property="fb:app_id" content="349176421957919" />
@@ -75,7 +75,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="/">Home</a>
+              <a class="nav-link js-scroll-trigger" href="/">Inicio</a>
             </li>
           </ul>
         </div>
@@ -87,51 +87,25 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2 class="section-heading text-center">Code of Conduct</h2>
+          <h2 class="section-heading text-center">Código de Conducta</h2>
           <ul class="text-list  mt-5">
             <li class="py-2">
-              Harassment includes offensive verbal comments related to gender, gender identity and expression, age, sexual orientation,
-              disability, physical appearance, body size, race, ethnicity, nationality, or religion, sexual images in public
-              spaces, deliberate intimidation, stalking, following, photography or audio/video recording against reasonable
-              consent, sustained disruption of talks or other events, inappropriate physical contact, and unwelcome sexual
-              attention.
+              Definimos acoso como cualquier comentario verbal ofensivo relacionado con la identidad o expresión de género, edad, orientación sexual, apariencia física, color de piel, estatura, étnia, nacionalidad, religion. También a cualquier intimidación deliberada, contacto físico inapropiado, fotografía o grabación de audio/video sin razonable consentimiento.
             </li>
             <li class="py-2">
-              Photography is encouraged, but other participants must be given a reasonable chance to opt out from being photographed. If
-              they object to the taking of their photograph, comply with their request. It is inappropriate to take photographs
-              in contexts where people have a reasonable expectation of privacy (in bathrooms or where participants are sleeping).
+              No es no, pará es pará. El staff tomará toda medida humanamente posible para mantener un ambiente seguro durante el evento.
             </li>
             <li class="py-2">
-              Participants asked to stop any harassing behavior are expected to comply immediately.
+              Miembros del staff, asistentes e invitados especiales, todos por igual, están sujetos también a este Código de Conducta.
             </li>
             <li class="py-2">
-              As this is a hackathon, we like to explicitly note that the hacks created at our hackathon are equally subject to the anti-harassment
-              policy.
+              Si ves a alguien que está sufriendo maltrato, o te sentís en una situación vulnerable, por favor contactá inmediatamente a alguien del staff.
             </li>
             <li class="py-2">
-              Sponsors and partners are also subject to the anti-harassment policy. In particular, sponsors should not use sexualised images,
-              activities, or other material. Sponsor representatives (including volunteers) should not use sexualised clothing/uniforms/costumes,
-              or otherwise create a sexualised environment.
-            </li>
-            <li class="py-2">
-              If you are being harassed, notice that someone else is being harassed, or have any other concerns, please contact a member
-              of hackathon staff immediately.
-            </li>
-            <li class="py-2">
-              Hackathon staff will be happy to help participants contact any local security or local law enforcement, provide escorts,
-              or otherwise assist those experiencing harassment to feel safe for the duration of the hackathon. We value
-              your attendance.
-            </li>
-            <li class="py-2">
-              If a participant engages in harassing behavior, the hackathon organisers may take any action they deem appropriate. This
-              includes warning the offender, expulsion from the hackathon with no refund (if applicable), or reporting their
-              behaviour to local law enforcement.
-            </li>
-            <li class="py-2">
-              We expect participants to follow these rules at hackathon and workshop venues and hackathon-related social events.
+              Todo proyecto desarrollado durante el evento estará sujeto, durante la duración del evento, al presente Código de Conducta. Si el staff considerase, basandose en éste código de conducta, que el proyecto es inapropiado, el equipo se verá descalificado.
             </li>
           </ul>
-          <p>Our code of conduct is based on the <a href="https://hackcodeofconduct.org/" target="_blank" title="Hack Code of Conduct">Hack
+          <p>Basado en: <a href="https://hackcodeofconduct.org/" target="_blank" title="Hack Code of Conduct"> the Hack
               Code of Conduct</a>.</p>
         </div>
       </div>
@@ -163,12 +137,6 @@
       <div class="footer-container position-relative">
         <div class="container">
           <div class="footer-bar d-flex justify-content-between flex-column flex-md-row align-items-center">
-            <div></div>
-            <div>
-              <a href="/">
-                <img src="../img/logo-inout-white.svg" alt="InOut Logo">
-              </a>
-            </div>
             <div>
               <a href="https://github.com/hackinout" target="_blank">
                 &lt;/&gt; with &#9829;
